# baan-txt-reader

./: .gitignore  README.md  main.py  pyproject.toml
src/baan_txt_reader/: __init__.py  reader.py
