[project]
name = "baan-txt-reader"
version = "0.1.0"
description = "Parser for Baan-generated industrial door configuration TXT files"
readme = "README.md"
authors = [
    { name = "Matej Boura", email = "B.Matej@email.cz" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
